# oxc-toml

./: .gitignore  .typos.toml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  deny.toml  dprint.json  justfile
.github/workflows/: ci.yml  zizmor.yml
examples/: format_directory.rs
src/: lexer.rs  lib.rs  syntax.rs  tree.rs
src/formatter/: macros.rs  mod.rs
src/parser/: macros.rs  mod.rs
src/util/: escape.rs  mod.rs
tests/: formatter.rs  snapshot.rs  toml_test.rs
tests/snapshots/: snapshot__snapshot.snap
