[package]
name = "oxc-toml"
version = "0.14.2"
authors = ["Boshen"]
categories = ["parser-implementations", "parsing"]
edition = "2024"
homepage = "https://github.com/oxc-project/oxc-toml"
keywords = ["toml", "formatter"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/oxc-project/oxc-toml"
description = "A TOML formatter library"

[lib]
test = false
doctest = false

[dev-dependencies]
ignore = "0.4"
insta = "1.45"
toml = "0.9.10"
walkdir = "2"
