[package]
name = "oxc-toml"
version = "0.14.4"
authors = ["Boshen"]
categories = ["parser-implementations", "parsing"]
edition = "2024"
homepage = "https://github.com/oxc-project/oxc-toml"
keywords = ["toml", "formatter"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/oxc-project/oxc-toml"
rust-version = "1.95.0"
description = "A TOML formatter library"

[lib]
test = false
doctest = false

[dev-dependencies]
ignore = "0.4"
insta = "1.45"
toml = "1.0.0"
walkdir = "2"
